--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
 	},
 	"require-dev": {
 		"armin/editorconfig-cli": "^1.0 || ^2.0",
-		"eliashaeussler/rector-config": "^3.0",
 		"ergebnis/composer-normalize": "^2.44",
 		"konradmichalik/php-doc-block-header-fixer": "^0.2.2",
 		"phpstan/phpstan": "^2.0",
 		"phpstan/phpstan-phpunit": "^2.0",
 		"phpstan/phpstan-symfony": "^2.0",
-		"phpunit/phpunit": "^10.2 || ^11.0 || ^12.0"
+		"phpunit/phpunit": "^10.2 || ^11.0 || ^12.0",
+		"rector/rector": "^2.2"
 	},
 	"autoload": {
 		"psr-4": {
