--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,18 @@
 		}
 	],
 	"require": {
-		"php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0 || ~8.5.0",
+		"php": "~8.2.0 || ~8.3.0 || ~8.4.0 || ~8.5.0",
 		"friendsofphp/php-cs-fixer": "^3.14",
 		"symfony/finder": "^5.4 || ^6.0 || ^7.0"
 	},
 	"require-dev": {
-		"armin/editorconfig-cli": "^1.0 || ^2.0",
+		"armin/editorconfig-cli": "^2.0",
 		"ergebnis/composer-normalize": "^2.44",
 		"konradmichalik/php-doc-block-header-fixer": "^0.3.0",
 		"phpstan/phpstan": "^2.0",
 		"phpstan/phpstan-phpunit": "^2.0",
 		"phpstan/phpstan-symfony": "^2.0",
-		"phpunit/phpunit": "^10.2 || ^11.0 || ^12.0",
+		"phpunit/phpunit": "^11.0 || ^12.0",
 		"rector/rector": "^2.2"
 	},
 	"autoload": {
